[package]
name = "study_planner"
version = "0.1.0"
edition = "2024"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.47", features = ["derive"] }
color-eyre = "0.6.5"
derive_more = { version = "2.0.1", features = ["display"] }
human-panic = "2.0.3"
inquire = "0.7.5"
libc = "0.2.175"
reqwest = "0.12.23"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
